--- a/api/package.json
+++ b/api/package.json
@@ -6,13 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "fs": "^0.0.1-security",
+    "got": "^10.4.0",
     "http-errors": "~1.6.3",
-    "jsdom": "^19.0.0",
+    "jsdom": "^16.2.2",
     "morgan": "~1.9.1",
     "request-promise": "^4.2.6"
   }
