--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.4",
+    "node-fetch": "^3.2.0",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
