--- a/api/package.json
+++ b/api/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "body-parser": "^1.19.2",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "firebase-admin": "^10.0.2",
     "fs": "^0.0.1-security",
     "got": "^10.4.0",
     "http-errors": "~1.6.3",
