--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.3",
     "jsdom": "^16.2.2",
     "morgan": "~1.9.1",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "url": "^0.11.0"
   }
 }
