--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/translate": "^6.3.1",
     "axios": "^0.25.0",
     "body-parser": "^1.19.2",
     "cheerio": "^1.0.0-rc.10",
