--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "draft-js": "^0.11.7",
     "firebase": "^9.6.4",
     "node-fetch": "^3.2.0",
     "nth-check": "^2.0.1",
@@ -20,11 +21,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-laag": "^1.8.0",
     "react-quizlet-flashcard": "^1.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "recompose": "^0.30.0",
+    "styled-icons": "^10.45.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
