--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "nth-check": "^2.0.1",
     "postcss": "^8.4.6",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.1",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-laag": "^1.8.0",
     "react-quizlet-flashcard": "^1.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-spotify-web-playback": "^0.9.1",
     "recompose": "^0.30.0",
+    "spotify-web-api-node": "^5.0.2",
     "styled-icons": "^10.45.0",
     "web-vitals": "^2.1.4"
   },
