server side spotify login and lyrics

--- a/api/package.json
+++ b/api/package.json
@@ -19,8 +19,10 @@
     "got": "^10.4.0",
     "http-errors": "~1.6.3",
     "jsdom": "^16.2.2",
+    "lyrics-finder": "^21.7.0",
     "morgan": "~1.9.1",
     "request-promise": "^4.2.6",
+    "spotify-web-api-node": "^5.0.2",
     "url": "^0.11.0"
   }
 }
