--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@firebase/app": "^0.7.21",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
@@ -14,7 +15,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "draft-js": "^0.11.7",
-    "firebase": "^9.6.4",
+    "firebase": "^9.6.11",
     "node-fetch": "^3.2.0",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.6",
